// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff() respects maxDepth option for equal parts 1`] = `
"  {
    one: {
      arr: [
        Object { … },
      ],
      map: Map {
        Object { … } => Object { … },
      },
      set: Set {
        Object { … },
      },
      two: {
        arr: [],
        arr2: Array [ … ],
        date: Date 1969-07-20 20:17:40 Z {},
        date2: Date 1969-07-20 20:17:40 Z { … },
        error: Error { … },
        fn: Function fn {},
        fn2: Function { … },
        map: Map {},
        map2: Map { … },
        obj: {},
        regexp: /foo/,
        regexp2: RegExp { /foo/ … },
        set: Set {},
        set2: Set { … },
        three: Object { … },
      },
    },
-   unequal: 1,
+   unequal: 2,
  }"
`;

exports[`diff() respects maxDepth option for equal parts 2`] = `
"  {
    one: {
      two: {
-       three: 'baz',
+       three: 'qux',
        three2: Array [ … ],
      },
    },
  }"
`;

exports[`format() respects maxDepth option 1`] = `
"{
  one: {
    arr: [
      Object { … },
    ],
    map: Map {
      Object { … } => Object { … },
    },
    set: Set {
      Object { … },
    },
    two: {
      arr: [],
      arr2: Array [ … ],
      date: Date 1969-07-20 20:17:40 Z {},
      date2: Date 1969-07-20 20:17:40 Z { … },
      error: Error { … },
      fn: Function fn {},
      fn2: Function { … },
      map: Map {},
      map2: Map { … },
      obj: {},
      regexp: /foo/,
      regexp2: RegExp { /foo/ … },
      set: Set {},
      set2: Set { … },
      three: Object { … },
    },
  },
}"
`;
